--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
         }
     ],
     "require": {
-        "mclassic/foundation-daterangepicker": "dev-composerfy",
-        "robloach/component-installer": "*"
+        "mindblaze/foundation-daterangepicker": "dev-composerfy",
+        "robloach/component-installer": "*",
+        "component/jquery": ">=1.10.x"
     },
     "extra": {
         "component": {
