--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "mindblaze/foundation-daterangepicker": "dev-composerfy",
         "robloach/component-installer": "*",
-        "component/jquery": ">=1.10.x"
+        "component/jquery": ">=1.10."
     },
     "extra": {
         "component": {
