--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "require": {
         "robloach/component-installer": "*",
-        "component/jquery": ">=1.10"
+        "components/jquery": ">=1.10"
     },
     "extra": {
         "component": {
