--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "robloach/component-installer": "*",
         "components/jquery": ">=2.1",
-        "moment/moment": "2.7.*"
+        "moment/moment": ">=2.0 <3.0"
     },
     "extra": {
         "component": {
